<resources>
    <string name="discover_places">Discover Places</string>
    <string name="nearby">Nearby</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="find_places">Find Places</string>
    <string name="terms">Terms of Use</string>
    <string name="select_category">Select Category</string>
    <string name="image_desc">Slider Image</string>
    <string-array name="units_array">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string name="select_distance">Select Distance</string>
    <string name="select_categories">Select Categories</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="sample_place_name">Location Name</string>
    <string name="sample_address">123 Main Street, Paris</string>
    <string name="favorite_toggle">Favorite</string>
    <string name="open_in_maps">Open in Maps</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>


    <string name="nearby_locations">Nearby Locations</string>
    <string name="search">Search</string>
    <string name="filters_none">Filters: None</string>

    <string name="yourNote">Your Note:</string>
    <string name="memo">Write what you liked or want to remember…</string>
    <string name="saveNote">Save Note</string>


    <string name="app_name">TravelBuddy</string>
    <string name="sort_filter">Sort / Filter</string>
    <string name="no_place_selected">No place selected</string>
    <string name="selected">Selected: </string>
    <string name="dark_mode">Dark Mode</string>
    <string name="distance_units">Distance Units</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="manage_permissions">Manage Permissions</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="version">Version 1.0.0</string>
    <string name="image">Image</string>
    <string name="your_favourites">Your Favourites</string>

    <string name="create">Create</string>
    <string name="modify">Modify</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
</resources>
